# Python-OC-Lettings

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  oc-lettings-site.sqlite3  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: containerize.yml  deploy.yml
lettings/: admin.py  models.py  urls.py  views.py
lettings/migrations/: 0001_initial.py  0002_copy_old_data.py  0003_remove_old_tables.py
lettings/templates/lettings/: index.html  letting.html
lettings/tests/: test_views.py
oc_lettings_site/: settings.py  urls.py  views.py
oc_lettings_site/tests/: test_views.py
profiles/: urls.py  views.py
profiles/migrations/: 0001_initial.py  0002_copy_old_data.py
profiles/templates/profiles/: index.html  profile.html
profiles/tests/: test_views.py
