[project]
name = "python-oc-lettings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8.1,<3.9"
dependencies = [
    "django==3.0",
    "gunicorn==23.0.0",
    "pytest-django==3.9.0",
    "six>=1.17.0",
    "whitenoise==5.3.0",
]

[dependency-groups]
dev = [
    "flake8>=7.1.0",
    "pyflakes>=2.1.1",
]
